# php-scanner

./: .gitignore  Cargo.toml  LICENSE  README.md  php.yar  whitelist.yar
src/: main.rs
