[package]
name = "php-scanner"
version = "0.1.0"
authors = ["David Athay <ko2fan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.15"
termion = "1.5"
rand = "0.8"
yara = "0.6.1"
clap = "2.33"
glob = "0.3"
slog = "2.7"
sloggers = "1.0"