[package]
name = "php-scanner"
description = "A tool to search for PHP malware"
version = "0.4.1"
authors = ["David Athay <ko2fan@gmail.com>"]
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yara = "0.6.1"
clap = "2.33"
walkdir = "2.3.2"
slog = "2.7"
sloggers = "1.0"

[package.metadata.rpm]
package = "php-scanner"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
php-scanner = { path = "/usr/bin/php-scanner" }
